# cylinder_3d_collision_intersection_repulsion_simulation

./: .gitignore  README.md  justfile  pyproject.toml
configs/: cylinders.toml  cylinders_hard.toml
src/rod_sim3d/: __init__.py  _array.py  _playback_controls.py  _volume_kernels.py  cli.py  config.py  cylinder_intersection.py  cylinder_polytope.py  dynamics.py  forces.py  geometry.py  hard_contact.py  initial_conditions.py  potentials.py  renderer.py  replay.py  simulation.py  state.py  storage.py  volume.py
tests/: test_cli.py  test_cylinder_intersection.py  test_cylinder_polytope.py  test_cylinder_wall.py  test_hard_contact.py  test_passthrough_mode.py  test_physics.py  test_potential.py  test_replay.py  test_storage.py  test_toy_problems.py  test_volume_api.py
