[project]
name = "rod-sim3d"
version = "0.1.0"
description = "3D simulation of equal-length zero-thickness rods with soft repulsive interactions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Generated project" }
]
dependencies = [
  "numpy>=1.26",
  "pyvista>=0.44",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "scipy>=1.12",
  "numba>=0.60",
  "imageio>=2.35"
]

[project.scripts]
rod-sim3d = "rod_sim3d.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rod_sim3d"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "ty>=0.0.1a1",
  "radon>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "N",   # pep8-naming
  "PL",  # pylint
  "TID", # flake8-tidy-imports
]
ignore = [
  "PLR0913",  # too many arguments: dataclasses and pure functions legitimately take many
  "PLR2004",  # magic value comparisons in tests
  "N803",     # we intentionally match mathematical notation (e.g. L, F_ij)
  "N806",     # same for local mathematical variables
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0913", "PLR2004"]

[tool.ty.environment]
root = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
# pyvista and matplotlib ship without type stubs; treat missing attributes on dynamic
# handles as warnings instead of errors so the static analysis stays actionable.
unresolved-attribute = "warn"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
